syntax = "proto3";

package documentation_setup;

service DocumentationSetupService {
  rpc SetupRepository(SetupRepositoryRequest) returns (SetupRepositoryResponse);
  rpc GetWebhookInfo(GetWebhookInfoRequest) returns (GetWebhookInfoResponse);
}

message SetupRepositoryRequest {
  string user_id = 1;
  string github_token = 2;
  string gitlab_token = 3;
  string gitlab_project_id = 4;
  string gitlab_docs_branch = 5;
  string docs_folder = 6;
  string ollama_model = 7;  // Replaced openai_api_key with ollama_model
}

message SetupRepositoryResponse {
  bool success = 1;
  string message = 2;
  string repo_id = 3;
  string webhook_url = 4;
  repeated string processed_files = 5;
}

message GetWebhookInfoRequest {
  string repo_id = 1;
}

message GetWebhookInfoResponse {
  bool success = 1;
  string webhook_url = 2;
  string webhook_secret = 3;
  string setup_instructions = 4;
}