syntax = "proto3";

package documentation_update;

service DocumentationUpdateService {
  rpc ProcessCommit(ProcessCommitRequest) returns (ProcessCommitResponse);
  rpc UpdateGitLabDocumentation(UpdateGitLabRequest) returns (UpdateGitLabResponse);
}

message ProcessCommitRequest {
  string repo_id = 1;
  string commit_hash = 2;
  string commit_message = 3;
  repeated string changed_files = 4;
  string diff = 5;
  string ollama_model = 6;  // Replaced openai_api_key with ollama_model
}

message ProcessCommitResponse {
  bool success = 1;
  string message = 2;
  string commit_analysis = 3;
  repeated string updated_files = 4;
}

message UpdateGitLabRequest {
  string repo_id = 1;
  string commit_hash = 2;
  string gitlab_token = 3;
  string gitlab_project_id = 4;
  string gitlab_docs_branch = 5;
  repeated string file_updates = 6;
}

message UpdateGitLabResponse {
  bool success = 1;
  string message = 2;
  repeated string updated_files = 3;
}